--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- External JS -->
@@ -32,10 +32,11 @@
     <nav>
       <span id="logo">Tweeter</span>
       <span>
-        <br>
-        <strong>Write</strong> a new tweet
-        <br>
-        <a href="http://www.google.ca"><i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></a>
+        <p>
+          <strong>Write</strong> a new tweet
+          <br>
+          <a href="http://www.google.ca"><i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></a>
+        </p>
       </span>
     </nav>
 
@@ -44,18 +45,23 @@
         <img src="/images/profile-hex.png"> 
       </div>
       <div>
-        <h2><strong>Your</strong> Name</h2>
+        <h2 class="name"><strong>Your</strong> Name</h2>
       </div>
   </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <h1>Testing</h1>
-      <i class="fas fa-angle-double-down"></i>
-      <p><b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vitae maximus libero. Aliquam eget dui a nisl aliquam tincidunt. Aliquam vulputate ligula non magna mollis suscipit. Sed vitae erat vel justo faucibus maximus quis nec ex. Suspendisse id tristique purus, et volutpat metus. Praesent nulla elit, sodales non sagittis et, ultricies eget sapien. Aliquam a malesuada orci. Nulla velit sem, interdum finibus risus ut, pellentesque feugiat neque.</p>
-      <p>Quisque ornare lectus et dolor hendrerit euismod. Donec euismod bibendum nisi a auctor. Curabitur dignissim dui odio, a elementum nunc iaculis a. In sagittis id quam elementum suscipit. Suspendisse et laoreet massa. Fusce non placerat est. Mauris elit urna, porta a est quis, bibendum laoreet sem. In ac mollis lacus, in interdum libero. Ut nec rutrum justo, quis aliquet mauris. Aenean gravida feugiat semper. Nullam vel orci eget nunc pretium gravida nec id est. Aliquam nunc sapien, tempor non nisl a, porttitor interdum nunc.</p>
-      <p>Quisque eget lobortis elit, vitae fringilla justo. Nulla mattis purus et dui fringilla, consectetur ultrices est rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla fermentum posuere dui, in scelerisque neque suscipit vitae. Donec iaculis, urna at vulputate sagittis, tellus urna porta lorem, eget semper dui mauris ut lectus. Nulla pharetra nunc quis pellentesque sagittis. Nulla id blandit ipsum, vel vestibulum enim. Nam dapibus urna in enim blandit blandit. Mauris posuere erat nec suscipit ornare. Nulla pulvinar ultrices tortor, quis interdum dui posuere eu. In hac habitasse platea dictumst. Aenean feugiat nulla vel nunc dictum posuere. Nulla vestibulum interdum nunc sed venenatis. Etiam lacinia nisi in tristique mattis. In dictum nisl sit amet felis imperdiet ultrices.</p>
-
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form>
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
     </main>
   </body>
 </html>
