changed some layout, add tweet seciont and css file

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,7 +32,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span id="logo">Tweeter</span>
-      <span>
+      <span id="writenew">
         <p>
           <strong>Write</strong> a new tweet
           <br>
@@ -53,12 +54,12 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form>
+        <form action="/tweets" method="POST">
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div>
-            <button type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+          <textarea name="text" id="tweet-text" rows="1" minlength="1" maxlength="140"></textarea>
+          <div id="tweet-below">
+            <span><button type="submit">Tweet</button></span>
+            <span><output name="counter" class="counter" for="tweet-text">140</output></span>
           </div>
         </form>
       </section>
