updated visuals and effects

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -34,11 +35,9 @@
     <nav>
       <span id="logo">Tweeter</span>
       <span id="writenew">
-        <p>
-          <strong>Write</strong> a new tweet
-          <br>
-          <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i>
-        </p>
+        <strong>Write</strong> a new tweet
+        <br>
+        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i>
       </span>
     </nav>
 
