--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
     <nav>
       <span id="logo">Tweeter</span>
       <span id="writenew">
-        <strong>Write</strong> a new tweet
+        <a href="#tweet-text"><strong>Write</strong> a new tweet
         <br>
-        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i>
+        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></a>
       </span>
     </nav>
 
@@ -72,7 +72,7 @@
           <p>Tweet</p>
           <footer>
             <span>10 days ago</span>
-            <span><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
+            <span class="icons"><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
           </footer>
         </article>
         <article>
@@ -83,7 +83,7 @@
           <p>Tweet</p>
           <footer>
             <span>10 days ago</span>
-            <span><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
+            <span class="icons"><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
           </footer>
         </article>
       </section>
