--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -63,30 +64,7 @@
           </div>
         </form>
       </section>
-      <section class="tweets">
-        <article>
-          <header>
-            <span class="username"><i class="fas fa-smile"></i> Some Body</span>
-            <span class="userid">@sum1</span>
-          </header>
-          <p>Tweet</p>
-          <footer>
-            <span>10 days ago</span>
-            <span class="icons"><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
-          </footer>
-        </article>
-        <article>
-          <header>
-            <span class="username"><i class="fas fa-smile"></i> Someone Else</span>
-            <span class="userid">@sum2</span>
-          </header>
-          <p>Tweet</p>
-          <footer>
-            <span>10 days ago</span>
-            <span class="icons"><i class="fas fa-flag"></i> <i class="fas fa-retweet"></i> <i class="fas fa-heart"></i></span>
-          </footer>
-        </article>
-      </section>
+      <section id="tweets-container"></section>
     </main>
   </body>
 </html>
