textarea submit sends text to post /tweets/

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="POST">
+        <form id="posttweet" action="/tweets" method="POST">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" rows="1" minlength="1"></textarea>
           <div id="tweet-below">
