loads new tweets without refreshing page. newest tweets at top

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
     <nav>
       <span id="logo">Tweeter</span>
       <span id="writenew">
-        <a href="#tweet-text"><strong>Write</strong> a new tweet
+        <strong>Write</strong> a new tweet
         <br>
-        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></a>
+        <a href="#tweet-text"><i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></a>
       </span>
     </nav>
 
