--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
+        <div id="error"></div>
         <form id="posttweet" action="/tweets" method="POST">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text" rows="1" minlength="1"></textarea>
