updated layout for large screens (1024px+)

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
       <div id="navbar">
       <span id="logo"><a href="#top">Tweeter</a></span>
       <span id="writenew">
-        <strong>Write</strong> a new tweet
+        <h4 class="light"><strong>Write</strong> a new tweet
         <br>
-        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i>
+        <i id="arrow-icon" class="fas fa-angle-double-down fa-fade"></i></h4>
       </span>
       </div>
     </nav>
@@ -52,7 +52,7 @@
         <img src="/images/profile-hex.png"> 
       </div>
       <div>
-        <h2 class="name"><strong>Your</strong> Name</h2>
+        <h2 class="light"><strong>Your</strong> Name</h2>
       </div>
     </header>
 
