--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
     <header class="top" id="top">
       <div>
-        <img src="/images/profile-hex.png"> 
+        <img class="profile" src="/images/profile-hex.png"> 
       </div>
       <div>
         <h2 class="light"><strong>Your</strong> Name</h2>
@@ -62,7 +62,7 @@
         <!-- <h2>Compose Tweet</h2> -->
         <div id="error"></div>
         <form id="posttweet" action="/tweets" method="POST">
-          <label for="tweet-text">What are you humming about?</label>
+          <label for="tweet-text"><h2>What are you humming about?</h2></label>
           <textarea name="text" id="tweet-text" rows="1" minlength="1"></textarea>
           <div id="tweet-below">
             <span><button type="submit">Tweet</button></span>
