--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <!-- Top nav bar (fixed) -->
     <nav class="fadenav">
       <div id="navbar">
-      <span id="logo"><a href="#top">Tweeter</a></span>
+      <span id="logo">Tweeter</span>
       <span id="writenew">
         <h4 class="light"><strong>Write</strong> a new tweet
         <br>
@@ -49,7 +49,7 @@
 
     <header class="top" id="top">
       <div>
-        <img class="profile" src="/images/profile-hex.png"> 
+        <img class="profile" src="/images/profilepic.jpg"> 
       </div>
       <div>
         <h2 class="light"><strong>Sarah</strong> Dela Cruz</h2>
